Finished testing for the Lines of Code Widget. Did some bug fixing for the incrementing and decrementing. Added a feature that dynamically changes the font size of the number the bigger it grows.

--- a/src/assets/lines-of-code-widget/lines-of-code-index.html
+++ b/src/assets/lines-of-code-widget/lines-of-code-index.html
@@ -25,7 +25,7 @@
                 <button onclick="increment()">+</button>
             </div>
             <!-- Confirm button to finalize the count -->
-            <button class="confirm-btn" onclick="confirm()">Confirm</button>
+            <button class="confirm-btn" onclick="confirm()">Confirm</button><!-- can remove if we dont want the other screen and functions-->
         </div>
     </div>
 
