--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,8 @@
     <script src="assets/scripts/splashScreen.js" type="module"></script>
     <script src="assets/scripts/widgets.js" type="module"></script>
     <script src="assets/summary-widget/summary.js" type="module"></script>
+    <script src="assets/scripts/emotion-widget.js" type="module"></script>
+    <script src="assets/scripts/sleep-widget.js" type="module"></script>
 
     <!-- Lock scroll during splash screen -->
     <style id="splashScreenLock">
@@ -427,6 +429,5 @@
 
 
         </div>
-        <script src="assets/emotion-widget/emotion-widget.js"></script>
 </body>
 </html>
