--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/emotion-widget/emotion-widget.css">
     <link rel="stylesheet" href="assets/lines-of-code-widget/lines-of-code-styles.css">
     <link rel="stylesheet" href="assets/summary-widget/summary.css">
+    <link rel="stylesheet" href="assets/css/lines-of-code-styles.css">
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -28,6 +29,7 @@
     <script src="assets/summary-widget/summary.js" type="module"></script>
     <script src="assets/scripts/emotion-widget.js" type="module"></script>
     <script src="assets/scripts/sleep-widget.js" type="module"></script>
+    <script src="assets/scripts/lines-of-code-script.js" type="module"></script>
 
     <!-- Lock scroll during splash screen -->
     <!-- <style id="splashScreenLock">
@@ -366,24 +368,20 @@
             <!-- LINES OF CODE WIDGET -->
 
             <div id="code-line-toggle" class="widget">
-                    <div class="lines-widget-content">
-
-                      
-                        <div class="widget-header-text">
-                            How many lines have you coded today?
-                        </div>
-                        <div class="controls">
-                            <!-- Buttons to increment and decrement the count, and an input field to display and change the count -->
-                            <button onclick="decrement()">-</button>
-                            <input type="number" id="number" class="number" value="5" oninput="updateNumber()">
-                            <button onclick="increment()">+</button>
-                        </div>
-                        <button class="confirm-btn" onclick="confirm()">Confirm</button>
+                <div class="lines-widget-content">
+                    <div class="code-symbol">
+                        &lt;/&gt;
                     </div>
-                    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
-
-                    <script src="assets/lines-of-code-widget/lines-of-code-script.js"></script>
-
+                    <div>
+                        <h3>How many lines have you coded today?</h3>
+                    </div>
+                    <div class="controls">
+                        <!-- Buttons to increment and decrement the count, and an input field to display and change the count -->
+                        <button id="lines-decrement">-</button>
+                        <input type="number" id="number" class="number">
+                        <button id="lines-increment">+</button>
+                    </div>
+                </div>
             </div>
 
 
