--- a/src/assets/sleep-widget/sleep-widget.html
+++ b/src/assets/sleep-widget/sleep-widget.html
@@ -49,11 +49,11 @@
          </div>
           <input class="slider" type="range" min="1" max="5" value="3">    
           <div class="emojis-container">
-            <img src="media/emojis/excellent.png" alt="Excellent" width="70px">
-            <img src="media/emojis/good.png" alt="Good" width="70px">
-            <img src="media/emojis/fair.png" alt="Fair" width="70px">
-            <img src="media/emojis/poor.png" alt="Poor" width="70px">
-            <img src="media/emojis/worst.png" alt="Worst" width="70px">
+            <img src="media/excellent.png" alt="Excellent" width="70px">
+            <img src="media/good.png" alt="Good" width="70px">
+            <img src="media/fair.png" alt="Fair" width="70px">
+            <img src="media/poor.png" alt="Poor" width="70px">
+            <img src="media/worst.png" alt="Worst" width="70px">
           </div>   
       </div>
       <script src="sleep-widget.js"></script>
