--- a/src/index.html
+++ b/src/index.html
@@ -26,10 +26,10 @@
     <script src="assets/scripts/textEditor.js" type="module"></script>
     <!-- <script src="assets/scripts/splashScreen.js" type="module"></script> -->
     <script src="assets/scripts/widgets.js" type="module"></script>
-    <script src="assets/summary-widget/summary.js" type="module"></script>
     <script src="assets/scripts/emotion-widget.js" type="module"></script>
     <script src="assets/scripts/sleep-widget.js" type="module"></script>
     <script src="assets/scripts/lines-of-code-script.js" type="module"></script>
+    <script src="assets/scripts/summary.js" type="module"></script>
 
     <!-- Lock scroll during splash screen -->
     <!-- <style id="splashScreenLock">
@@ -115,14 +115,7 @@
                             <p>Sun</p>
                         </div>
                     </div>
-                    <div class="bar-graph">
-                        <div class="bar" style="height: 60%;"></div>
-                        <div class="bar" style="height: 80%;"></div>
-                        <div class="bar" style="height: 40%;"></div>
-                        <div class="bar" style="height: 90%;"></div>
-                        <div class="bar" style="height: 34%;"></div>
-                        <div class="bar" style="height: 70%;"></div>
-                        <div class="bar" style="height: 98%;"></div>
+                    <div id="sleep-summary" class="bar-graph">
                     </div>
     
                 </div>
@@ -151,14 +144,7 @@
                             <p>Sun</p>
                         </div>
                     </div>
-                    <div class="bar-graph">
-                       <div class="bar" style="height: 60%;"></div>
-                       <div class="bar" style="height: 80%;"></div>
-                       <div class="bar" style="height: 40%;"></div>
-                       <div class="bar" style="height: 90%;"></div>
-                       <div class="bar" style="height: 34%;"></div>
-                       <div class="bar" style="height: 70%;"></div>
-                       <div class="bar" style="height: 98%;"></div>
+                    <div id="lines-coded-summary" class="bar-graph">
                    </div>
                 </div>
             </div>
