Got summary to sync with the rest of the backend

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
             <button class="dropbtn">Weekly Summary</button>
             <div class="dropdown-content">
                 <div class="box">
-                    <div class="box">
+                    <div class="box" id="mood-box">
                         <h3>Mood History</h3>
                         <div class="week">
                             <div class="day">
