Changed the date tags on summary widget, now ALL working

--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
                 </div>
                 <div class="box">
                     <h3>Hours of Sleep</h3>
-                    <div class="week">
+                    <div class="week" id="sleep-week">
                         <div class="day">
                             <p>Mon</p>
                         </div>
@@ -121,7 +121,7 @@
                 </div>
                 <div class="box">
                     <h3>Lines Coded</h3>
-                    <div class="week">
+                    <div class="week" id="lines-week">
                         <div class="day">
                             <p>Mon</p>
                         </div>
