Fixed a lot of UI bugs
resolves #139
resolves #138
resolves #136

--- a/src/index.html
+++ b/src/index.html
@@ -43,12 +43,14 @@
     </div>
 
     <div class="header"> <!--Wrapper for entire header -->
-        <h1> Hi, User! </h1>
-        <div class="title-container"> <!--Container for title text-->
-            <h4 class="title" id="date">Today's Entry</h4>
-            <span class="material-symbols-outlined">
-                edit
-            </span>
+        <div class="header-title">
+            <h1> Hi, User! </h1>
+            <div class="title-container"> <!--Container for title text-->
+                <h4 class="title" id="date">Today's Entry</h4>
+                <span class="material-symbols-outlined">
+                    edit
+                </span>
+            </div>
         </div>
         <!--Summary Dropdown-->
         <div class="dropdown">
@@ -332,7 +334,7 @@
                 
                 <div class="container-widget-text"> <!--Container for entire widget-->
                     <div class="widget-header-text">
-                        How would you describe your mood today?
+                        <h3>How would you describe your mood today?</h3>
                     </div>
                     <div class="containerFace"> <!--Container for the face emotion image-->
                         <img src="assets/emotion-widget/media/faceMeh.png" id="face"> <!--Image for the selected face emotion-->
