--- a/src/index.html
+++ b/src/index.html
@@ -222,13 +222,19 @@
             </div>
 
             <!-- LINES OF CODE WIDGET -->
+
+
             <div id="code-line-toggle" class="widget">
                 <div class="widget-header-icon">
-                    <span class="material-symbols-outlined" style="color: #ffff; font-size: 70px;">code</span>
+                    <span class="material-symbols-outlined" style="color: #ffff; font-size: 70px;">
+                        code
+                    </span>
                 </div>
                 <div class="container-widget-text">
                     <div class="lines-widget-content">                      
-                        <div class="widget-header-text">How many lines have you coded today?</div>
+                        <div class="widget-header-text">
+                            How many lines have you coded today?
+                        </div>
                         <div class="controls">
                             <!-- Buttons to increment and decrement the count, and an input field to display and change the count -->
                             <button onclick="decrement()">-</button>
@@ -239,55 +245,14 @@
                 </div>
             </div>
 
-            <!-- SUMMARY WIDGET -->
+
             <div id="summary-toggle" class="widget">
-                <div class="summary-widget" id="summary-widget">
-                    <div class="dropdown">
-                        <div class="dropdown-content">
-                            <div class="box">
-                                <div class="widget-header-text">
-                                    Mood History 
-                                </div>
-                                
-                                <div class="week">
-                                    <div class="day">
-                                        <p>Mon</p>
-                                        <img src="assets/summary-widget/media/faceAmazing.png" alt="smiley" class="mood-icon">
-                                    </div>
-                                    <div class="day">
-                                        <p>Tue</p>
-                                        <img src="assets/summary-widget/media/faceGood.png" alt="smiley" class="mood-icon">
-                                    </div>
-                                    <div class="day">
-                                        <p>Wed</p>
-                                        <img src="assets/summary-widget/media/faceMeh.png" alt="smiley" class="mood-icon">
-                                    </div>
-                                    <div class="day">
-                                        <p>Thu</p>
-                                        <img src="assets/summary-widget/media/faceMiserable.png" alt="smiley" class="mood-icon">
-                                    </div>
-                                    <div class="day">
-                                        <p>Fri</p>
-                                        <img src="assets/summary-widget/media/faceSad.png" alt="smiley" class="mood-icon">
-                                    </div>
-                                    <div class="day">
-                                        <p>Sat</p>
-                                        <img src="assets/summary-widget/media/faceAmazing.png" alt="smiley" class="mood-icon">
-                                    </div>
-                                    <div class="day">
-                                        <p>Sun</p>
-                                        <img src="assets/summary-widget/media/faceGood.png" alt="smiley" class="mood-icon">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="box">
-                                <h3>Hours of Sleep</h3>
-
-
+                <div id="summary-widget">
+                    this is the summary widget
+                </div>
+            </div>
 
         </div>
         <script src="assets/emotion-widget/emotion-widget.js"></script>
-
-    <script src="assets/emotion-widget/emotion-widget.js"></script>
 </body>
 </html>
