--- a/src/index.html
+++ b/src/index.html
@@ -277,11 +277,55 @@
             </div>
 
 
+            <!-- SUMMARY WIDGET -->
             <div id="summary-toggle" class="widget">
-                <div id="summary-widget">
-                    this is the summary widget
-                </div>
-            </div>
+                <div class="summary-widget" id="summary-widget">
+                    <div class="dropdown">
+                        <div class="dropdown-content">
+                            <div class="box">
+                                <div class="widget-header-text">
+                                    Mood History 
+                                </div>
+                                
+                                <div class="week">
+                                    <div class="day">
+                                        <p>Mon</p>
+                                        <img src="assets/summary-widget/media/faceAmazing.png" alt="smiley" class="mood-icon">
+                                    </div>
+                                    <div class="day">
+                                        <p>Tue</p>
+                                        <img src="assets/summary-widget/media/faceGood.png" alt="smiley" class="mood-icon">
+                                    </div>
+                                    <div class="day">
+                                        <p>Wed</p>
+                                        <img src="assets/summary-widget/media/faceMeh.png" alt="smiley" class="mood-icon">
+                                    </div>
+                                    <div class="day">
+                                        <p>Thu</p>
+                                        <img src="assets/summary-widget/media/faceMiserable.png" alt="smiley" class="mood-icon">
+                                    </div>
+                                    <div class="day">
+                                        <p>Fri</p>
+                                        <img src="assets/summary-widget/media/faceSad.png" alt="smiley" class="mood-icon">
+                                    </div>
+                                    <div class="day">
+                                        <p>Sat</p>
+                                        <img src="assets/summary-widget/media/faceAmazing.png" alt="smiley" class="mood-icon">
+                                    </div>
+                                    <div class="day">
+                                        <p>Sun</p>
+                                        <img src="assets/summary-widget/media/faceGood.png" alt="smiley" class="mood-icon">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <h3>Hours of Sleep</h3>
+
+
+
+        </div>
+</body>
+</html>
 
         </div>
         <script src="assets/emotion-widget/emotion-widget.js"></script>
