emotion widget - removed css from html, fixed e2e test

--- a/src/index.html
+++ b/src/index.html
@@ -340,7 +340,7 @@
                         <p id="emotionText">Meh</p>
                     </div>
                     <div class="gauge" id="gauge"> <!--Container for the gauage emotion selector-->
-                        <div class="needle" id="needle" style="--score:50"> <!--Container for the needle pointing at current selection on gauge-->
+                        <div class="needle" id="needle"> <!--Container for the needle pointing at current selection on gauge-->
                         </div>
                     </div>  
                 </div>
